--- a/style.css
+++ b/style.css
@@ -16,9 +16,12 @@
 
 
 .item {
-  border: 2px solid #000;
+  border: 1px solid #000;
   padding: 10px;
   border-radius: 20px;
+  width: 80%;
+  left: 4.0625rem;
+  position: relative;
 }
 
 .item-title {
@@ -84,3 +87,4 @@
   text-align: center;
   margin-bottom: 3.125rem;
 }
+
